fixed vertikal scrollbar on contactlist

--- a/contacts.css
+++ b/contacts.css
@@ -5,7 +5,7 @@
 
 #contact_list {
     display: flex;
-    padding: 32px 32px 0px 309px;
+    padding: 32px 32px 0px 286px;
     flex-direction: column;
     align-items: flex-start;
     overflow-y: auto;
